Se creó con Colab

--- a/Working_with_funcitons_and_Classes.ipynb
+++ b/Working_with_funcitons_and_Classes.ipynb
@@ -516,7 +516,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,7 +573,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +598,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,7 +628,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,7 +662,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -670,6 +670,266 @@
           "text": [
             "El carro presenta la siguientes carácteristicas:\n",
             "{'color': 'red', 'size': 'small', 'speed': 'fast', 'carro tipo': 'ferrari', 'fecha': '2015'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Clases\n",
+        "\n",
+        "class Dog:\n",
+        "  \"A funciton that is part of a class is a method, this method runs first and assign atributes to instances\"\n",
+        "  def __init__(self, name, age):\n",
+        "    \"\"\"Initialize name and age attributes.\"\"\"\n",
+        "#       Any variable prefixed with self is available to every\n",
+        "#       method in the class, and we’ll also be able to access these variables through\n",
+        "#       any instance created from the class.\n",
+        "    self.name= name\n",
+        "    self.age = age\n",
+        "\n",
+        "  def sit(self):\n",
+        "      \"\"\"Simulte dog sitting command\"\"\"\n",
+        "      print(f\"{self.name} is now sitting\")\n",
+        "\n",
+        "  def roll_over(self):\n",
+        "      \"\"\"Simulte dog roll_over command\"\"\"\n",
+        "      print(f\"{self.name} rolled over\")\n",
+        "\n",
+        "\n",
+        "dogo_1 = Dog(\"Chatin\",2)\n",
+        "dogo_1.roll_over()\n",
+        "dogo_2 = Dog(\"Negrita\",3)\n"
+      ],
+      "metadata": {
+        "id": "vte1MzQFueiG",
+        "outputId": "790cd9bd-eda0-45b1-a417-0cdeb21b0247",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chatin rolled over\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dogo_1.name"
+      ],
+      "metadata": {
+        "id": "i5BkhFFBvwkG",
+        "outputId": "09e7fdbc-6ebf-4e79-b835-5d1c436e5872",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Chatin'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-1. Restaurant: Make a class called Restaurant. The __init__() method for\n",
+        "Restaurant should store two attributes: a restaurant_name and a cuisine_type.\n",
+        "Make a method called describe_restaurant() that prints these two pieces of\n",
+        "information, and a method called open_restaurant() that prints a message indicating that the restaurant is open.\n",
+        "Make an instance called restaurant from your class. Print the two attributes individually, and then call both methods."
+      ],
+      "metadata": {
+        "id": "6tkpIGPu6i4y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Restaurant:\n",
+        "      def __init__(self, restaurant_name, cuisine_type):\n",
+        "        self.restaurant_name = restaurant_name\n",
+        "        self.cuisine_type = cuisine_type\n",
+        "\n",
+        "      def describe_restaurant(self):\n",
+        "        print(f\"Welcome to restaurant {self.restaurant_name}, we prepared {self.cuisine_type} food \")\n",
+        "\n",
+        "      def open_restaurant(self):\n",
+        "        print(f\"The restaurant is open\")\n",
+        "\n",
+        "restaurant = Restaurant(\"MamaMeli\",\"Criolla\")\n",
+        "restaurant.restaurant_name\n",
+        "restaurant.cuisine_type\n",
+        "restaurant.describe_restaurant()\n"
+      ],
+      "metadata": {
+        "id": "rXpUvTQN6j8R",
+        "outputId": "fe1975e2-7b47-44d9-b92f-492d66a6383c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Welcome to restaurant MamaMeli, we prepared Criolla food \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-2. Three Restaurants: Start with your class from Exercise 9-1. Create three\n",
+        "different instances from the class, and call describe_restaurant() for each\n",
+        "instance"
+      ],
+      "metadata": {
+        "id": "bIZ5KSzN-dxP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "restaurant_one = Restaurant(\"DonPapaFelix\",\"Molecular\")\n",
+        "restaurant_two = Restaurant(\"DonEros\",\"Innovation\")\n",
+        "restaurant_three = Restaurant(\"DonDavid\",\"Criolla\")\n",
+        "\n",
+        "restaurant_one.describe_restaurant()\n",
+        "restaurant_two.describe_restaurant()\n",
+        "restaurant_three.describe_restaurant()"
+      ],
+      "metadata": {
+        "id": "8SFXMwBK-dKF",
+        "outputId": "bd125e5d-55b4-4a0f-a114-ed5a1166197b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Welcome to restaurant DonPapaFelix, we prepared Molecular food \n",
+            "Welcome to restaurant DonEros, we prepared Innovation food \n",
+            "Welcome to restaurant DonDavid, we prepared Criolla food \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# car.py\n",
+        "\n",
+        "class Car:\n",
+        "\n",
+        "    def __init__(self, make , model, year):\n",
+        "       self.make = make\n",
+        "       self.model = model\n",
+        "       self.year = year\n",
+        "\n",
+        "    def get_descriptive_name(self):\n",
+        "      long_name = f\"{self.make} {self.model} {self.year}\"\n",
+        "      return long_name.title()\n",
+        "\n",
+        "my_new_car = Car(\"Audini\",\"A4\",1998)\n",
+        "my_new_car.get_descriptive_name()\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "7O_O9fIh-t0k",
+        "outputId": "c7b13a46-876e-4b54-d4d8-1befb37c35d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Audini A4 1998'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# car.py\n",
+        "#Adding a new atribute which change\n",
+        "# I got the conclusion of every functionality of ther car can be represented\n",
+        "# as a method.\n",
+        "class Car:\n",
+        "\n",
+        "    def __init__(self, make , model, year):\n",
+        "       self.make = make\n",
+        "       self.model = model\n",
+        "       self.year = year\n",
+        "       self.odometer_reading = 0\n",
+        "\n",
+        "    def get_descriptive_name(self):\n",
+        "      long_name = f\"{self.make} {self.model} {self.year}\"\n",
+        "      return long_name.title()\n",
+        "\n",
+        "    def read_odometer(self):\n",
+        "      \"\"\"Print the statements showing the car's mileage.\"\"\"\n",
+        "      print(f\"This car has {self.odometer_reading} miles on it\")\n",
+        "\n",
+        "\n",
+        "my_new_car = Car(\"Audini\",\"A4\",1998)\n",
+        "my_new_car.get_descriptive_name()\n",
+        "my_new_car.odometer_reading"
+      ],
+      "metadata": {
+        "id": "wtMafDnUCqhd",
+        "outputId": "9e58c7e1-21a7-4504-862f-dd1ce44c86cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This car has 0 miles on it\n"
           ]
         }
       ]
