Se creó con Colab

--- a/Working_with_funcitons_and_Classes.ipynb
+++ b/Working_with_funcitons_and_Classes.ipynb
@@ -709,7 +709,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +733,7 @@
           "height": 36
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -789,7 +789,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,7 +829,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,8 +860,7 @@
         "\n",
         "my_new_car = Car(\"Audini\",\"A4\",1998)\n",
         "my_new_car.get_descriptive_name()\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "7O_O9fIh-t0k",
@@ -871,7 +870,7 @@
           "height": 36
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -911,28 +910,183 @@
         "      \"\"\"Print the statements showing the car's mileage.\"\"\"\n",
         "      print(f\"This car has {self.odometer_reading} miles on it\")\n",
         "\n",
+        "    def update_odometer(self, miles):\n",
+        "      if miles >= self.odometer_reading:\n",
+        "          self.odometer_reading = miles\n",
+        "          print(f\"This car has {self.odometer_reading} miles on it\")\n",
+        "      else:\n",
+        "          print(\"You can roll back de odometer\")\n",
+        "\n",
+        "    def increment_odometer(self, increment_miles):\n",
+        "      self.odometer_reading+= increment_miles\n",
+        "      print(f\"This car has {self.odometer_reading} miles on it\")\n",
         "\n",
         "my_new_car = Car(\"Audini\",\"A4\",1998)\n",
         "my_new_car.get_descriptive_name()\n",
-        "my_new_car.odometer_reading"
+        "my_new_car.odometer_reading = 50\n",
+        "my_new_car.read_odometer()"
       ],
       "metadata": {
         "id": "wtMafDnUCqhd",
-        "outputId": "9e58c7e1-21a7-4504-862f-dd1ce44c86cd",
+        "outputId": "74a17a80-7397-4985-f694-ce4274bab008",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "This car has 0 miles on it\n"
+            "This car has 50 miles on it\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Using a method to updete an attribute in a class."
+      ],
+      "metadata": {
+        "id": "ldZjZUwYZFjy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_new_car.update_odometer(150)\n",
+        "my_new_car.increment_odometer(150)"
+      ],
+      "metadata": {
+        "id": "thB9I_m8ZLQf",
+        "outputId": "88e55590-9db8-4bec-87c2-7b2c8642ac4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You can roll back de odometer\n",
+            "This car has 750 miles on it\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-4. Number Served: Start with your program from Exercise 9-1 (page 162).\n",
+        "Add an attribute called number_served with a default value of 0. Create an\n",
+        "instance called restaurant from this class. Print the number of customers the\n",
+        "restaurant has served, and then change this value and print it again."
+      ],
+      "metadata": {
+        "id": "2OQCVRmjdtqW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-5. Login Attempts: Add an attribute called login_attempts to your User class\n",
+        "from Exercise 9-3 (page 162). Write a method called increment_login_attempts()\n",
+        "that increments the value of login_attempts by 1. Write another method called\n",
+        "reset_login_attempts() that resets the value of login_attempts to 0.\n",
+        "Make an instance of the User class and call increment_login_attempts()\n",
+        "several times. Print the value of login_attempts to make sure it was incremented\n",
+        "properly, and then call reset_login_attempts(). Print login_attempts again to\n",
+        "make sure it was reset to 0."
+      ],
+      "metadata": {
+        "id": "0Pxgj-7OfBkh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Restaurant:\n",
+        "      def __init__(self, restaurant_name, cuisine_type):\n",
+        "        self.restaurant_name = restaurant_name\n",
+        "        self.cuisine_type = cuisine_type\n",
+        "        self.number_served = 0\n",
+        "        self.login_attempts = 0\n",
+        "\n",
+        "      def describe_restaurant(self):\n",
+        "        print(f\"Welcome to restaurant {self.restaurant_name}, we prepared {self.cuisine_type} food \")\n",
+        "\n",
+        "      def open_restaurant(self):\n",
+        "        print(f\"The restaurant is open\")\n",
+        "\n",
+        "      def chage_number_served(self,servedone):\n",
+        "        self.number_served= servedone\n",
+        "        print(f\"The number of served dished have changed to: {self.number_served}\")\n",
+        "\n",
+        "      def increment_number_served(self,served):\n",
+        "        self.number_served+=served\n",
+        "        print(f\"The number of served dished have increased in : {served}\")\n",
+        "\n",
+        "      def increment_login_attempts(self, increment_login):\n",
+        "        self.login_attempts+= increment_login\n",
+        "        print(f\"This is the number of login attempts : {self.login_attempts} \")\n",
+        "\n",
+        "\n",
+        "      def reset_login_attempts(self):\n",
+        "        self.login_attempts = 0\n",
+        "        print(f\"This is the number of login attempts : {self.login_attempts} \")\n",
+        "\n",
+        "restaurant = Restaurant(\"MamaMeli\",\"Criolla\")\n",
+        "restaurant.number_served\n",
+        "restaurant.chage_number_served(20)\n",
+        "restaurant.increment_number_served(20)\n",
+        "restaurant.number_served\n",
+        "restaurant.increment_login_attempts(1)\n",
+        "restaurant.increment_login_attempts(1)\n",
+        "restaurant.increment_login_attempts(1)\n",
+        "restaurant.reset_login_attempts()"
+      ],
+      "metadata": {
+        "id": "291NkIcddu7r",
+        "outputId": "0cf2e395-3b70-48ac-a717-526085ef95d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number of served dished have changed to: 20\n",
+            "The number of served dished have increased in : 20\n",
+            "This is the number of login attempts : 1 \n",
+            "This is the number of login attempts : 2 \n",
+            "This is the number of login attempts : 3 \n",
+            "This is the number of login attempts : 0 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ElectriCar(Car):\n",
+        "\n",
+        "    def __init__(self,make,model,year):\n",
+        "      \"\"\"Initialize attributes of the parent class.\"\"\"\n",
+        "      super().__init__(make,model,year)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "X8WRt7CVjyrh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
