Se creó con Colab

--- a/Working_with_funcitons_and_Classes.ipynb
+++ b/Working_with_funcitons_and_Classes.ipynb
@@ -928,12 +928,12 @@
       ],
       "metadata": {
         "id": "wtMafDnUCqhd",
-        "outputId": "74a17a80-7397-4985-f694-ce4274bab008",
+        "outputId": "f109258c-a949-47e6-e873-fb5aec9bcd8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,7 +966,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,12 +1051,12 @@
       ],
       "metadata": {
         "id": "291NkIcddu7r",
-        "outputId": "0cf2e395-3b70-48ac-a717-526085ef95d8",
+        "outputId": "7bd7ce38-20c1-4cdb-a486-bc2f9800bd91",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 83,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1075,15 +1075,323 @@
     {
       "cell_type": "code",
       "source": [
+        "# Defining more attributes to the child class\n",
         "class ElectriCar(Car):\n",
         "\n",
-        "    def __init__(self,make,model,year):\n",
+        "    def __init__(self,make,model,year): # Init method which call the atributes of Electric Car subclass.\n",
         "      \"\"\"Initialize attributes of the parent class.\"\"\"\n",
         "      super().__init__(make,model,year)\n",
+        "\n",
+        "      self.battery_size = 40\n",
+        "\n",
+        "    def describe_baterry(self):\n",
+        "      \"\"\"Print a statement describing the battery size\"\"\"\n",
+        "      print(f\"This car has a {self.battery_size}--kWh battery.\")\n",
+        "\n",
+        "      #Super function allows you to call a method from the parent class.\n",
+        "      # Otherwise call the init method form superclass and give them all the\n",
+        "      # attributes and method to the subclass.\n",
+        "\n",
+        "    def fill_gas_tank(self): # Overrigind methods\n",
+        "      \"\"\"Priting a statement describing the state of fuel tank \"\"\"\n",
+        "      print(f\"Electri car doesnt have a fuel tank\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "electric_car = ElectriCar(\"Steel\",\"Samsung\",1005)\n",
+        "electric_car.get_descriptive_name()\n",
+        "electric_car.odometer_reading # New one car.\n",
+        "electric_car.describe_baterry()\n",
+        "electric_car.fill_gas_tank()\n",
+        "\n",
+        "\n",
+        "# Add attributes and method to the child class (inheretance) to differentiate\n",
+        "# child cass from the parent class.\n",
+        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "X8WRt7CVjyrh"
+        "id": "X8WRt7CVjyrh",
+        "outputId": "4124d7cb-e8b8-4b5f-fb38-dc7454d82b8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This car has a 40--kWh battery.\n",
+            "Electri car doesnt have a fuel tank\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Composition in classes : Split class into pieces with goal to work with more organized."
+      ],
+      "metadata": {
+        "id": "zPfk8phdZLu6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Battery:\n",
+        "    \"\"\"This is an attemtp to model a simple battery \"\"\"\n",
+        "    def __init__(self, battery_size=65):\n",
+        "      self.battery_size = battery_size\n",
+        "\n",
+        "    def describe_baterry(self):\n",
+        "      \"\"\"Print a statement describing the battery size\"\"\"\n",
+        "      print(f\"This car has a {self.battery_size}--kWh battery.\")\n",
+        "\n",
+        "    def get_range(self):\n",
+        "      \"\"\" Print a statement about the range this battery provides\"\"\"\n",
+        "      if self.battery_size == 40:\n",
+        "        range = 150\n",
+        "      elif self.battery_size == 65:\n",
+        "        range = 225\n",
+        "\n",
+        "      print(f\"This car can go about {range} miles on a full charge\")\n",
+        "\n",
+        "\n",
+        "class ElectriCar(Car):\n",
+        "\n",
+        "    def __init__(self,make,model,year): # Init method which call the atributes of Electric Car subclass.\n",
+        "      \"\"\"Initialize attributes of the parent class.\"\"\"\n",
+        "      super().__init__(make,model,year)\n",
+        "\n",
+        "      self.battery = Battery()\n",
+        "\n",
+        "    def fill_gas_tank(self): # Overrigind methods\n",
+        "      \"\"\"Priting a statement describing the state of fuel tank \"\"\"\n",
+        "      print(f\"Electri car doesnt have a fuel tank\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "electric_car = ElectriCar(\"Steel\",\"Samsung\",1005)\n",
+        "electric_car.get_descriptive_name()\n",
+        "electric_car.odometer_reading # New one car.\n",
+        "electric_car.battery.describe_baterry() # En el objecto electric car, buscar\n",
+        "# atributo objeto battery y emplea su método describe battery.\n",
+        "electric_car.battery.get_range()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5qGqU7ZUZYex",
+        "outputId": "945d80ad-9d38-4cab-b8ed-baf126e3fa23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This car has a 65--kWh battery.\n",
+            "This car can go about 225 miles on a full charge\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Será este método parte de la clase bateria o clase carros? Donde lo agrego, le hago composition?"
+      ],
+      "metadata": {
+        "id": "Y7b5V3tufey0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-6. Ice Cream Stand: An ice cream stand is a specific kind of restaurant. Write\n",
+        "a class called IceCreamStand that inherits from the Restaurant class you wrote in\n",
+        "Exercise 9-1 (page 162) or Exercise 9-4 (page 166). Either version of the class\n",
+        "will work; just pick the one you like better. Add an attribute called flavors that\n",
+        "stores a list of ice cream flavors. Write a method that displays these flavors.\n",
+        "Create an instance of IceCreamStand, and call this method."
+      ],
+      "metadata": {
+        "id": "0FLy_WkoieJh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class IceCreamStand(Restaurant):\n",
+        "    \"\"\"This is an attempt to model a IceCreamStand \"\"\"\n",
+        "    def __init__(self,restaurant_name,cuisine_type):\n",
+        "\n",
+        "      super().__init__(restaurant_name,cuisine_type)\n",
+        "      self.flavors = [\"Chocolate\",\"Coffe\",\"Menta\",\"Coconout\"]\n",
+        "\n",
+        "    def flavors_available(self):\n",
+        "      print(\"This is a list of flavors available\")\n",
+        "      for flavors in self.flavors:\n",
+        "        print(f\"\\n- {flavors}\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "ice_cream = IceCreamStand(\"IceMamaMeli\",\"IceCream\")\n",
+        "ice_cream.flavors_available()"
+      ],
+      "metadata": {
+        "id": "CNGTQZA5fm72",
+        "outputId": "ca4f1e7f-f323-427d-bb7a-ff13d427f458",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is a list of flavors available\n",
+            "\n",
+            "- Chocolate\n",
+            "\n",
+            "- Coffe\n",
+            "\n",
+            "- Menta\n",
+            "\n",
+            "- Coconout\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-7. Admin: An administrator is a special kind of user. Write a class called\n",
+        "Admin that inherits from the User class you wrote in Exercise 9-3 (page 162)\n",
+        "or Exercise 9-5 (page 167). Add an attribute, privileges, that stores a list of\n",
+        "strings like \"can add post\", \"can delete post\", \"can ban user\", and so on.\n",
+        "Write a method called show_privileges() that lists the administrator’s set of\n",
+        "privileges. Create an instance of Admin, and call your method."
+      ],
+      "metadata": {
+        "id": "VuLd6jBflqv1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class User:\n",
+        "      def __init__(self, first_name, last_name,age,city,state):\n",
+        "        self.first_name = first_name\n",
+        "        self.last_name = last_name\n",
+        "        self.age = age\n",
+        "        self.city = city\n",
+        "        self.state = state\n",
+        "\n",
+        "      def summary_information(self):\n",
+        "        print (\n",
+        "        f\"{self.first_name}\\n\"\n",
+        "        f\"{self.last_name}\\n\"\n",
+        "        f\"{self.age}\\n\"\n",
+        "        f\"{self.city}\\n\"\n",
+        "        f\"{self.state}\\n\" )\n",
+        "\n",
+        "class Administator(User):\n",
+        "      def __init__(self, first_name, last_name,age,city,state):\n",
+        "        self.privileges = [\"can add post\", \"can delete post\", \"can ban user\"]\n",
+        "\n",
+        "        super().__init__( first_name, last_name,age,city,state)\n",
+        "\n",
+        "      def show_privileges(self):\n",
+        "        \"These are the priviliges of the user 'Administrator'. \"\n",
+        "        for privileges in self.privileges:\n",
+        "          print(f\"\\n{privileges}\")\n",
+        "\n",
+        "\n",
+        "user_one = User(\"Eros\",\"Aranibar\",30,\"Lima\", \"Married\")\n",
+        "user_one.summary_information()\n",
+        "administrator_one = Administator(\"Eros\",\"Aranibar\",30,\"Lima\", \"Married\")\n",
+        "administrator_one.show_privileges()\n"
+      ],
+      "metadata": {
+        "id": "HD6zjn8VmIyG",
+        "outputId": "dc430a14-f4b9-4aaa-9807-4553172ab9ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eros\n",
+            "Aranibar\n",
+            "30\n",
+            "Lima\n",
+            "Married\n",
+            "\n",
+            "\n",
+            "can add post\n",
+            "\n",
+            "can delete post\n",
+            "\n",
+            "can ban user\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class User:\n",
+        "      def __init__(self, first_name, last_name,age,city,state):\n",
+        "        self.first_name = first_name\n",
+        "        self.last_name = last_name\n",
+        "        self.age = age\n",
+        "        self.city = city\n",
+        "        self.state = state\n",
+        "\n",
+        "      def summary_information(self):\n",
+        "        print (\n",
+        "        f\"{self.first_name}\\n\"\n",
+        "        f\"{self.last_name}\\n\"\n",
+        "        f\"{self.age}\\n\"\n",
+        "        f\"{self.city}\\n\"\n",
+        "        f\"{self.state}\\n\" )\n",
+        "\n",
+        "class Administator(User):\n",
+        "      def __init__(self, first_name, last_name,age,city,state):\n",
+        "        self.privileges = [\"can add post\", \"can delete post\", \"can ban user\"]\n",
+        "\n",
+        "        super().__init__( first_name, last_name,age,city,state)\n",
+        "\n",
+        "      def show_privileges(self):\n",
+        "        \"These are the priviliges of the user 'Administrator'. \"\n",
+        "        for privileges in self.privileges:\n",
+        "          print(f\"\\n{privileges}\")\n",
+        "\n",
+        "\n",
+        "user_one = User(\"Eros\",\"Aranibar\",30,\"Lima\", \"Married\")\n",
+        "user_one.summary_information()\n",
+        "administrator_one = Administator(\"Eros\",\"Aranibar\",30,\"Lima\", \"Married\")\n",
+        "administrator_one.show_privileges()"
+      ],
+      "metadata": {
+        "id": "SmEWO3Exp-jh"
       },
       "execution_count": null,
       "outputs": []
