Se creó con Colab

--- a/Working_with_funcitons_and_Classes.ipynb
+++ b/Working_with_funcitons_and_Classes.ipynb
@@ -1113,10 +1113,10 @@
       ],
       "metadata": {
         "id": "X8WRt7CVjyrh",
-        "outputId": "4124d7cb-e8b8-4b5f-fb38-dc7454d82b8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4124d7cb-e8b8-4b5f-fb38-dc7454d82b8b"
       },
       "execution_count": 10,
       "outputs": [
@@ -1188,11 +1188,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "5qGqU7ZUZYex",
-        "outputId": "945d80ad-9d38-4cab-b8ed-baf126e3fa23",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5qGqU7ZUZYex",
+        "outputId": "945d80ad-9d38-4cab-b8ed-baf126e3fa23"
       },
       "execution_count": 27,
       "outputs": [
@@ -1250,11 +1250,11 @@
         "ice_cream.flavors_available()"
       ],
       "metadata": {
-        "id": "CNGTQZA5fm72",
-        "outputId": "ca4f1e7f-f323-427d-bb7a-ff13d427f458",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CNGTQZA5fm72",
+        "outputId": "ca4f1e7f-f323-427d-bb7a-ff13d427f458"
       },
       "execution_count": 43,
       "outputs": [
@@ -1326,11 +1326,11 @@
         "administrator_one.show_privileges()\n"
       ],
       "metadata": {
-        "id": "HD6zjn8VmIyG",
-        "outputId": "dc430a14-f4b9-4aaa-9807-4553172ab9ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HD6zjn8VmIyG",
+        "outputId": "dc430a14-f4b9-4aaa-9807-4553172ab9ea"
       },
       "execution_count": 56,
       "outputs": [
@@ -1355,29 +1355,34 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "9-8. Privileges: Write a separate Privileges class. The class should have one\n",
+        "attribute, privileges, that stores a list of strings as described in Exercise 9-7.\n",
+        "Move the show_privileges() method to this class. Make a Privileges instance\n",
+        "as an attribute in the Admin class. Create a new instance of Admin and use your\n",
+        "method to show its privileges."
+      ],
+      "metadata": {
+        "id": "sDhuZ8Z2qGHg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "class User:\n",
-        "      def __init__(self, first_name, last_name,age,city,state):\n",
-        "        self.first_name = first_name\n",
-        "        self.last_name = last_name\n",
-        "        self.age = age\n",
-        "        self.city = city\n",
-        "        self.state = state\n",
+        "#Making a composition of the privileges method into a class.\n",
         "\n",
-        "      def summary_information(self):\n",
-        "        print (\n",
-        "        f\"{self.first_name}\\n\"\n",
-        "        f\"{self.last_name}\\n\"\n",
-        "        f\"{self.age}\\n\"\n",
-        "        f\"{self.city}\\n\"\n",
-        "        f\"{self.state}\\n\" )\n",
+        "\n",
         "\n",
         "class Administator(User):\n",
         "      def __init__(self, first_name, last_name,age,city,state):\n",
-        "        self.privileges = [\"can add post\", \"can delete post\", \"can ban user\"]\n",
+        "        self.privileges = Privileges()\n",
         "\n",
         "        super().__init__( first_name, last_name,age,city,state)\n",
+        "\n",
+        "class Privileges:\n",
+        "      def __init__(self, privileges=[\"can add post\", \"can delete post\", \"can ban user\"]):\n",
+        "          self.privileges = privileges\n",
         "\n",
         "      def show_privileges(self):\n",
         "        \"These are the priviliges of the user 'Administrator'. \"\n",
@@ -1388,13 +1393,50 @@
         "user_one = User(\"Eros\",\"Aranibar\",30,\"Lima\", \"Married\")\n",
         "user_one.summary_information()\n",
         "administrator_one = Administator(\"Eros\",\"Aranibar\",30,\"Lima\", \"Married\")\n",
-        "administrator_one.show_privileges()"
+        "administrator_one.privileges.show_privileges()"
       ],
       "metadata": {
-        "id": "SmEWO3Exp-jh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SmEWO3Exp-jh",
+        "outputId": "09437f1a-2f47-4bd5-d0e7-66d670a9494b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eros\n",
+            "Aranibar\n",
+            "30\n",
+            "Lima\n",
+            "Married\n",
+            "\n",
+            "\n",
+            "can add post\n",
+            "\n",
+            "can delete post\n",
+            "\n",
+            "can ban user\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-9. Battery Upgrade: Use the final version of electric_car.py from this section.\n",
+        "Add a method to the Battery class called upgrade_battery(). This method\n",
+        "should check the battery size and set the capacity to 65 if it isn’t already. Make\n",
+        "an electric car with a default battery size, call get_range() once, and then\n",
+        "call get_range() a second time after upgrading the battery. You should see an\n",
+        "increase in the car’s range."
+      ],
+      "metadata": {
+        "id": "i81o-x_srKCC"
+      }
     }
   ]
 }
