Se creó con Colab

--- a/Working_with_funcitons_and_Classes.ipynb
+++ b/Working_with_funcitons_and_Classes.ipynb
@@ -933,7 +933,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1056,7 +1056,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1118,7 +1118,7 @@
         },
         "outputId": "4124d7cb-e8b8-4b5f-fb38-dc7454d82b8b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1194,7 +1194,7 @@
         "id": "5qGqU7ZUZYex",
         "outputId": "945d80ad-9d38-4cab-b8ed-baf126e3fa23"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1256,7 +1256,7 @@
         "id": "CNGTQZA5fm72",
         "outputId": "ca4f1e7f-f323-427d-bb7a-ff13d427f458"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1332,7 +1332,7 @@
         "id": "HD6zjn8VmIyG",
         "outputId": "dc430a14-f4b9-4aaa-9807-4553172ab9ea"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1402,7 +1402,7 @@
         "id": "SmEWO3Exp-jh",
         "outputId": "09437f1a-2f47-4bd5-d0e7-66d670a9494b"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1437,6 +1437,33 @@
       "metadata": {
         "id": "i81o-x_srKCC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from car import Car\n",
+        "\n",
+        "my_new_car = Car('Audi','A4',2023)\n",
+        "print(my_new_car.get_descriptive_name())\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "7Fn2I_1jk_3Y",
+        "outputId": "8c82832e-502b-4271-ad16-790946edf983",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Audi A4 2023\n"
+          ]
+        }
+      ]
     }
   ]
 }
